--- a/app/app/app.csproj
+++ b/app/app/app.csproj
@@ -63,9 +63,9 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="core\HelloWorld.cs" />
-    <Compile Include="core\model\IContainerElement.cs" />
-    <Compile Include="core\model\implementation\MatrixDimension3.cs" />
-    <Compile Include="core\model\implementation\SymmetricMatrix.cs" />
+    <Compile Include="core\IContainerElement.cs" />
+    <Compile Include="core\MatrixDimension3.cs" />
+    <Compile Include="core\SymmetricMatrix.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
