#2 added Kate's work

--- a/app/app/app.csproj
+++ b/app/app/app.csproj
@@ -62,9 +62,13 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="core\Element.cs" />
+    <Compile Include="core\ElementsMap.cs" />
     <Compile Include="core\HelloWorld.cs" />
     <Compile Include="core\IContainerElement.cs" />
+    <Compile Include="core\InputData.cs" />
     <Compile Include="core\MatrixDimension3.cs" />
+    <Compile Include="core\Node.cs" />
     <Compile Include="core\SymmetricMatrix.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
