--- a/app-test/app-test.csproj
+++ b/app-test/app-test.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="core\ElementsMapTest.cs" />
     <Compile Include="core\HelloWorldTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
