--- a/app/app/app.csproj
+++ b/app/app/app.csproj
@@ -69,6 +69,7 @@
     <Compile Include="core\InputData.cs" />
     <Compile Include="core\MatrixDimension3.cs" />
     <Compile Include="core\Node.cs" />
+    <Compile Include="core\SolutionManager.cs" />
     <Compile Include="core\SymmetricMatrix.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
