--- a/app/app/app.csproj
+++ b/app/app/app.csproj
@@ -63,6 +63,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="core\Element.cs" />
+    <Compile Include="core\GeneralMatrixBuild.cs" />
     <Compile Include="core\ElementsMap.cs" />
     <Compile Include="core\HelloWorld.cs" />
     <Compile Include="core\IContainerElement.cs" />
