#91 Рефакторинг. Генерация номера узла. Тест для класса генерирующего список элементов.

--- a/app-test/app-test.csproj
+++ b/app-test/app-test.csproj
@@ -57,8 +57,7 @@
     <Compile Include="core\CholeskySolverTest.cs" />
     <Compile Include="core\ElementsMapTest.cs" />
     <Compile Include="core\HelloWorldTest.cs" />
-    <Compile Include="core\SolutionManagerTest_1.cs" />
-    <Compile Include="core\SolutionManagerTest_2.cs" />
+    <Compile Include="core\SolutionManagerTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
