--- a/app/app/app.csproj
+++ b/app/app/app.csproj
@@ -65,7 +65,7 @@
     <Compile Include="core\CholeskySolver.cs" />
     <Compile Include="core\DoubleContainerElement.cs" />
     <Compile Include="core\Element.cs" />
-    <Compile Include="core\GeneralMatrixBuild.cs" />
+    <Compile Include="core\GeneralMatrixBuilder.cs" />
     <Compile Include="core\ElementsMap.cs" />
     <Compile Include="core\HelloWorld.cs" />
     <Compile Include="core\IContainerElement.cs" />
